FIX: added .eslintrc

--- a/React_Fundamentals/src/styles.scss
+++ b/React_Fundamentals/src/styles.scss
@@ -30,3 +30,7 @@ input:invalid {
   font-family: Georgia, 'Times New Roman', Times, serif;
   font-size: medium;
 }
+
+.search-input_form {
+  display: grid;
+}
