--- a/React_Fundamentals/src/styles.scss
+++ b/React_Fundamentals/src/styles.scss
@@ -26,7 +26,7 @@ input:invalid {
 }
 
 .search-input {
-  @extend %progress_bar;
+  @extend .progress_bar;
   font-family: Georgia, 'Times New Roman', Times, serif;
   font-size: medium;
 }
