--- a/React_Fundamentals/src/styles.scss
+++ b/React_Fundamentals/src/styles.scss
@@ -49,9 +49,18 @@ ul {
     list-style-type: none;
   }
   &-item {
-
+    display: flex;
+    justify-content: space-between;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    padding: 5px;
     border-bottom: 1px solid grey;
   }
+}
+
+.item > .close {
+  background-image: url("./assets/delete.svg");
+  height: 30px;
+  width: 30px;
 }
 
 .todo > form {
@@ -74,10 +83,11 @@ ul {
 
 .bottom {
   display: flex;
-  flex-direction: row;
-  align-content: space-around;
-  width: 100%;
+  justify-content: space-between;
+  margin-top: 30px;
+  padding: 10px;
   color: white;
+  background: grey;
   & > .items-left {
     font-size: small;
   }
