added warning list is empty

--- a/React_Fundamentals/src/styles.scss
+++ b/React_Fundamentals/src/styles.scss
@@ -48,6 +48,7 @@ ul {
   &-list{
     margin-top: 30px;
     list-style-type: none;
+    text-align-last: center;
   }
   &-item {
     display: flex;
