--- a/React_Fundamentals/src/styles.scss
+++ b/React_Fundamentals/src/styles.scss
@@ -1,15 +1,20 @@
-$primary-color: white;
-$bg: black;
+$white-color: rgb(255, 244, 244);
+$orange-color: rgb(248, 180, 54);
+$red-color: rgb(177, 0, 24);
+$black-color: rgba(0, 0, 0, 0.747);
+$dark_grey-color: rgb(44, 44, 44);
+$grey-color: rgb(122, 122, 122);
+$light_grey-color: rgb(175, 174, 174);
 
 h1 {
-  color: $primary-color;
-  background-color: $bg;
+  color: $white-color;
+  background-color: $black-color;
 }
 
 .progress_bar {
   margin: 10px;
   max-width: 500px;
-  border: 1px black solid;
+  border: 1px $black-color solid;
 }
 
 .input-progress_bar {
@@ -18,11 +23,11 @@ h1 {
 
 .progress_bar > .progress_bar-inner {
   height: 15px;
-  background-color: orange;
+  background-color: $orange-color;
 }
 
 input:invalid {
-  box-shadow: 0 0 5px 1px red;
+  box-shadow: 0 0 5px 1px $red-color;
 }
 
 .search-input {
@@ -43,7 +48,7 @@ ul {
   left: calc(50% - 110px);
   font-family: 'Oleo Script', cursive;
   top: 120px;
-  color: rgb(44, 44, 44);
+  color: $dark_grey-color;
   font-size: 2em;
   &-list{
     margin-top: 30px;
@@ -54,9 +59,9 @@ ul {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    box-shadow: 0 0 10px $black-color;
     padding: 5px;
-    border-bottom: 1px solid grey;
+    border-bottom: 1px solid $light_grey-color;
   }
 }
 
@@ -82,7 +87,7 @@ ul {
     font-size: 16px;
     width: 100%;
     border-radius: 6px;
-    background-color: rgb(240, 240, 240);
+    background-color: $white-color;
     font-family: 'Oleo Script', cursive;
     outline: none;
   }
@@ -93,25 +98,25 @@ ul {
   }
 }
 
-.bottom {
+.footer {
   display: flex;
   justify-content: space-between;
   padding: 10px;
-  color: white;
-  background: grey;
+  color: $white-color;
+  background: $grey-color;
   margin-bottom: 15px;
   & > .items-left {
     font-size: small;
   }
   & > button {
-    color: white;
+    color: $white-color;
     border: 0;
     background: none;
   }
   & > select {
-    background-color: grey;
+    background-color: $grey-color;
     border: 0;
-    color: white;
+    color: $white-color;
     font-family: cursive;
   }
 }
