added items component and selectors

--- a/React_Fundamentals/src/styles.scss
+++ b/React_Fundamentals/src/styles.scss
@@ -158,6 +158,16 @@ a {
   }
 }
 
-.dismensions {
-  max-width: 400px;
-}
+// .items-container {
+//   display: flex;
+//   flex-direction: row;
+//   font-size: 2em;
+//   > * {
+//     justify-content: center;
+//     align-items: center;
+//   }
+// }
+
+// .rw-multiselect{
+//   width: 500px;
+// }
