FIX: selected and unselected items

--- a/React_Fundamentals/src/styles.scss
+++ b/React_Fundamentals/src/styles.scss
@@ -158,6 +158,9 @@ a {
   }
 }
 
+.rw-multiselect-tag-btn {
+  display: none;
+}
 // .items-container {
 //   display: flex;
 //   flex-direction: row;
